syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    The most recent (last) print record for CTS/UTDF markets as well as SpiderRock synthetic markets.  Records also incorporate some summary detail and closing mark information as well.
*/    
message StockPrint {
    message PKey {
        
        TickerKey ticker = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    StkExch prt_exch = 100; // print exch
    int32 prt_size = 103; // print size
    float prt_price = 106; // print price level
    int32 prt_cluster_num = 109; // incremental print cluster counter (one counter per ticker; used to group prints into clusters)
    int32 prt_cluster_size = 112; // cumulative size of prints in this sequence (prints @ same or more aggressive price with less than 25 ms elapsing since first print; can span exchanges)
    int32 prt_volume = 115; // cumulative print size today
    float mrk_price = 118; // last regular market print price
    float cls_price = 121; // official closing price (if available)
    StkPrintType prt_type = 124;
    int32 prt_cond1 = 127; // print condition (from SIP feed)
    int32 prt_cond2 = 130;
    int32 prt_cond3 = 133;
    int32 prt_cond4 = 136;
    float ebid = 139; // exchange bid (@ print time) [SIP feed]
    float eask = 142; // exchange ask (@ print time) [SIP feed]
    int32 ebsz = 145; // exchange bid size
    int32 easz = 148; // exchange ask size
    float eage = 151; // age of prevailing quote at time of print
    PrtSide prt_side = 154;
    int64 prt_timestamp = 157; // exchange high precision timestamp (if available)
    int64 net_timestamp = 160; // inbound packet PTP timestamp from SR gateway switch; usually syncronized with facility grandfather clock
    google.protobuf.Timestamp timestamp = 163;
}


