syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    FutureCloseMark records are published immediately after the market close - 5 min and again when exchanges publish official marks.
    FutureCloseMark records are published to the SpiderRock elastic cluster when clsMarkState=Final
*/    
message FutureCloseMark {
    message PKey {
        
        ExpiryKey fkey = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    DateKey trade_date = 100;
    ClsMarkState cls_mark_state = 103; // Preview or Final
    double opn_prc = 106; // Open price (start of regular hours)
    double min_prc = 109; // Low price (during regular hours)
    double max_prc = 112; // High price (during regular hours)
    int32 open_interest = 115; // Open interest
    int32 prt_count = 118; // Print count (entire trading period)
    int32 prt_volume = 121; // Print volume (entire trading period)
    int32 realized_cnt = 124; // number of minute bar segments used in realizedVar calc
    double realized_vol = 125; // realizedVar = SQRT: SUM[ LOG( qteTwap(T) / qteTwap(T+1) ) ^ 2 ] / realizedCnt @ 1 minute intervals during market hours
    float avg_mkt_size = 127; // Average market size
    float avg_mkt_width = 130; // Average market width
    double bid_prc = 133; // bid price (close - 5 min)
    double ask_prc = 136; // ask price (close - 5 min)
    double sr_cls_prc = 139; // SR close mark (close - 5 min)
    double close_prc = 142; // official exchange closing mark (or last print)
    YesNo has_sRCls_prc = 145; // srClsPrc is valid
    YesNo has_close_prc = 148; // closePrc is valid; otherwise is last print
    google.protobuf.Timestamp sr_close_mark_dttm = 151; // (close - 5 min) date/time
    google.protobuf.Timestamp timestamp = 154; // record publish/update timestamp
}


