syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    FutureOpenMark records are created during the end-of-day rotation for each product and intended for use the following trading day.
*/    
message FutureOpenMark {
    message PKey {
        
        ExpiryKey fkey = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    DateKey trade_date = 100;
    OpnMarkState opn_mark_state = 116; // Preview or Final
    double sr_cls_prc = 103; // SR open mark; [SR close mark (close - 5min) from previous day]
    double close_prc = 106; // exchange open mark; [exchange close mark from previous day]
    google.protobuf.Timestamp timestamp = 115;
}


