syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    FutureMinuteBar records are created once per minute for all future markets (outrights and spreads).  These records are visible in SRSE and are published to the SpiderRock elastic cluster at the same time.
*/    
message FutureMinuteBar {
    message PKey {
        
        ExpiryKey fkey = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    string date = 100; // Trade Date
    string time = 103; // Trade Time end of period (Bar)
    double prt_open = 106; // Print at open of period (Bar)
    double prt_high = 109; // High price during period (Bar)
    double prt_low = 112; // Low price during period (Bar)
    double prt_last = 115; // Print at close of period (Bar)
    double prt_vWap = 118; // Period (Bar) VWap
    int32 prt_volume = 121; // Period (Bar) number of contracts
    int32 prt_count = 124; // Number of prints during the period
    double qte_hi_bid = 127; // Quote bid high
    double qte_lo_ask = 130; // Quote ask low
    double qte_twap = 133; // Quote Twap
    int32 qte_count = 136; // Quote number of contracts
    double bid = 139; // Bid at the time of the print
    double ask = 142; // Ask at the time of the print
    int32 bid_sz = 145; // Bid size at the time of print
    int32 ask_sz = 148; // Ask size at the time of print
    float width = 151; // reference point for expWidth (SR debug use)
    YesNo is_eOB = 154; // is end-of-bar (every 10 minutes)
    YesNo is_eOH = 157; // is end-of-hour
    google.protobuf.Timestamp timestamp = 160; // same as date + time
}


