syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    These records represent live market summary snapshots for each active option
*/    
message OptionMarketSummary {
    message PKey {
        
        OptionKey okey = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    double opn_price = 100; // start of day (SR) open mark
    double opn_volatility = 103; // start of day (SR) open mark (volatility)
    double cls_price = 106; // end of day (SR) close mark
    double cls_volatility = 109; // end of day (SR) close mark (volatility)
    double min_prt_prc = 112; // minimum print price within market hours
    double min_prt_vol = 115; // minimum print volatility within market hours
    double max_prt_prc = 118; // maximum print price within market hours
    double max_prt_vol = 121; // maximum print volatility within market hours
    int32 open_interest = 124;
    int32 bid_count = 127; // num prints <= SR surface mark
    int32 bid_volume = 130; // volume when prtPrice <= quote.bid
    int32 ask_count = 133; // num prints >= SR surface mark
    int32 ask_volume = 136; // volume when prtPrice >= quote.ask
    int32 mid_count = 139; // num prints inside quote.ebid / quote.eask
    int32 mid_volume = 142; // volume inside quote.ebid / quote.eask
    int32 prt_count = 145; // number of distinct print reports
    double last_prt_price = 148; // last print price
    float last_prt_volatility = 151; // last print volatility
    double avg_width = 154; // average market width (time weighted)
    float avg_bid_size = 157; // average bid size (time weighted)
    float avg_ask_size = 160; // average ask size (time weighted)
    google.protobuf.Timestamp last_print = 163;
    google.protobuf.Timestamp timestamp = 166;
}


