syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;


    
message OpraPrintType {
    message PKey {
        
        int32 opra_print_type = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    string print_type_char = 100; // character value of printType
    string print_code = 103; // eg, AUTO, CANC
    string print_code_string = 106; // longer string
    string print_code_description = 109; // full description
}


