syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    Live public spread orders for each exchange (if available)
*/    
message SpreadExchOrder {
    message PKey {
        
        TickerKey skey = 10; // SR or exchange assigned Spread TickerKey (ProductDefinition.pkey) (might be null)
        OptExch exch = 11;
        BuySell side = 12;
        YesNo is_test = 13;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    TickerKey ticker = 100; // underlier (or product group) tickerKey
    string order_iD = 103; // exchange order ID
    int32 size = 106; // total spreads available
    double price = 109;
    YesNo is_price_valid = 112;
    int32 orig_order_size = 115; // original order size (if available)
    ExchOrderType order_type = 118;
    ExchOrderStatus order_status = 121;
    MarketQualifier market_qualifier = 124;
    ExecQualifier exec_qualifier = 127;
    TimeInForce time_in_force = 130;
    FirmType firm_type = 133;
    string clearing_firm = 136;
    string clearing_accnt = 139;
    int64 src_timestamp = 142; // source high precision timestamp (if available)
    int64 net_timestamp = 145; // SpiderRock network PTP timestamp
    int64 dgw_timestamp = 148; // SpiderRock data gateway timestamp
    google.protobuf.Timestamp timestamp = 151;
    string exch_spr_iD = 170; // unique exchange spread id
}


