syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    StockCloseMark records are created immediately after the market close (clsMarkState=SRClose), when exchanges publish official marks (clsMarkState=ExchClose), and again during top of day rotation (clsMarkState=Final).  These records contain closing quotes and prices as well as markup details for all outright options.
    StockCloseMark records are published to the SpiderRock elastic cluster when clsMarkState=Final
*/    
message StockCloseMark {
    message PKey {
        
        TickerKey ticker = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    DateKey trade_date = 100;
    ClsMarkState cls_mark_state = 103; // Close mark state. None; LastPrt; SRClose; ExchClose; Final
    float opn_prc = 106; // Open price
    float min_prc = 109; // Low price
    float max_prc = 112; // High price
    int32 shares_outstanding = 115; // Shares outstanding
    int32 prt_count = 118; // Print count
    int32 prt_volume = 121; // Print volume
    float realized_vol = 124; // Realized vol
    float avg_mkt_size = 127; // Average market size
    float avg_mkt_width = 130; // Average market width
    float bid_prc = 133; // bid price (close - 1min)
    float ask_prc = 136; // ask price (close - 1min)
    float sr_cls_prc = 139; // SR close mark (close - 1min)
    float close_prc = 142; // official exchange closing mark (last print; then official close)
    YesNo has_sRCls_prc = 145;
    YesNo has_close_prc = 148;
    google.protobuf.Timestamp sr_close_mark_dttm = 151; // from MarketCloseQuote.srCloseMarkDttm
    google.protobuf.Timestamp timestamp = 154; // record publish/update timestamp
}


