syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    These records represent live market summary snapshots for equity, index, and synthetic markets.
*/    
message StockMarketSummary {
    message PKey {
        
        TickerKey ticker = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    double opn_price = 100; // first print price of the day during regular market hours
    double mrk_price = 103; // last print handled during regular market hours
    double cls_price = 106; // official exchange closing price
    double min_price = 109; // minimum print price within market hours
    double max_price = 112; // maximum print price within market hours
    int32 shares_outstanding = 115; // shares outstanding
    int32 bid_count = 118; // num prints <= quote.bid
    int32 bid_volume = 121; // volume when prtPrice <= quote.bid
    int32 ask_count = 124; // num prints >= quote.ask
    int32 ask_volume = 127; // volume when prtPrice >= quote.ask
    int32 mid_count = 130; // num prints inside quote.bid / quote.ask
    int32 mid_volume = 133; // volume inside quote.bid / quote.ask
    int32 prt_count = 136; // number of distinct print reports
    double prt_price = 139; // last print price
    int32 exp_count = 142; // number of updates included in exponential average
    double exp_width = 145; // exponential average market width (10 minute 1/2 life)
    float exp_bid_size = 148; // exponential average bid size (10 minute 1/2 life)
    float exp_ask_size = 151; // exponential average ask size (10 minute 1/2 life)
    google.protobuf.Timestamp last_print = 154;
    google.protobuf.Timestamp timestamp = 157;
}


