syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    StockMinuteBar records are created once per minute for each open stock and index market.  These records are visible in SRSE and are published to the SpiderRock elastic cluster at the same time.
*/    
message StockMinuteBar {
    message PKey {
        
        TickerKey ticker = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    string date = 100;
    string time = 103;
    double prt_open = 106; // Open print
    double prt_high = 109; // High print
    double prt_low = 112; // Low print
    double prt_last = 115; // Last print
    double prt_vWap = 118; // VWap (print)
    int32 prt_volume = 121; // Print volume
    int32 prt_count = 124; // Print count
    double qte_hi_bid = 127; // Quote high bid
    double qte_lo_ask = 130; // Quote low ask
    double qte_twap = 133; // Quote TWap
    int32 qte_count = 136; // Quote count
    double bid = 139; // Bid
    double ask = 142; // Ask
    int32 bid_sz = 145; // Bid size
    int32 ask_sz = 148; // Ask size
    float width = 151; // Bid/ask spread
    YesNo is_eOB = 154; // is end-of-bar (every 10 minutes)
    YesNo is_eOH = 157; // is end-of-hour
    google.protobuf.Timestamp timestamp = 160; // same as date + time
}


