syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;


    
message MsgDesc {
    message GridFieldOptions {
        
        string name = 142;
        string fields = 143;
    }


    MessageMetadata _meta = 1;
    
    string name = 100; // message name
    uint32 m_num = 103; // protobuf message number
    string schema_hash = 106; // schema hash (changes each time the schema is modified)
    MLinkActions actions = 144; // 'SIURD'
    YesNo has_tKey = 112; // message contains a 'TickerKey' x-ray field
    YesNo has_eKey = 115; // message contains an 'ExpiryKey' x-ray field
    YesNo has_oKey = 118; // message contains an 'OptionKey' x-ray field
    YesNo has_cF = 121; // message has a 'ClientFirm' fields (message has client firm visiblity restrictions)
    MLinkToken m_token = 124; // the mlink token this message is associated with
    DataProduct data_products = 145; // flag enum containing all the data products this message is associated with
    string srse_products = 140; // comma separated list of the SRSE Products this message is associated with
    string desc = 127; // message description (if any)
    string topic = 146; // message topic
    YesNo auto_assigned_pkey = 147; // indication that MLink adds its own pkey and the user does not need to specify one.
    string pri_time_field = 130; // this is the primary time field for the time control and histogram
    string sec_time_field = 133; // this is the Top10 field for the stacked bar / label on the time control histogram (blank if none)
    string static_filter_fields = 139; // comma separated list of (default) static filter fields (in display order)
    repeated GridFieldOptions grid_field_options = 141;
}


