syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message OptExpiryDefinition {
    message PKey {
        
        ExpiryKey ekey = 10; // option root+expiration
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    TickerKey ticker = 100; // master ticker
    ExpiryKey fkey = 103; // future key of the option deliverable
    google.protobuf.Timestamp expiration = 106; // option expiration date and time
    google.protobuf.Timestamp maturity_date = 109;
    double display_factor = 112;
    double cab_price = 115;
    PriceFormat price_format = 118;
    double min_tick_size = 121;
    google.protobuf.Timestamp timestamp = 124;
}


